--- a/Swallow/app/src/main/res/layout/fragment_test.xml
+++ b/Swallow/app/src/main/res/layout/fragment_test.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.nyjsl.swallow.test.TestMainActivity"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    >
+    android:padding="16dp">
+
 
     <TextView
         android:id="@+id/test_tv"
@@ -29,20 +25,10 @@
         android:layout_height="wrap_content"
         android:text="show"/>
     <Button
-        android:id="@+id/change"
+        android:id="@+id/kill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="switch"/>
-    <Button
-        android:id="@+id/duang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="duang"/>
+        android:text="kill bill"/>
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       ></FrameLayout>
 
 </LinearLayout>
