--- a/Swallow/app/src/main/res/layout/activity_test_main.xml
+++ b/Swallow/app/src/main/res/layout/activity_test_main.xml
@@ -23,6 +23,11 @@
         android:text="帅到没朋友"
         android:gravity="center"/>
 
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/show"
         android:layout_width="wrap_content"
