--- a/Swallow/app/src/main/res/layout/activity_test_main.xml
+++ b/Swallow/app/src/main/res/layout/activity_test_main.xml
@@ -44,6 +44,18 @@
         android:layout_height="wrap_content"
         android:text="duang"/>
 
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:fadingEdge="none"
+            android:listSelector="@android:color/transparent"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:scrollbarStyle="outsideOverlay"
+             />
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
