--- a/Swallow/app/src/main/res/values/styles.xml
+++ b/Swallow/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-       <!-- <item name="colorPrimary">@color/colorPrimary</item>
+        <!-- <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>-->
         <item name="android:windowBackground">@android:color/white</item>
@@ -10,5 +10,9 @@
         <item name="colorPrimaryDark">@color/material_indigo_600</item>
         <item name="colorAccent">@color/material_teal_a400</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
