--- a/Swallow/app/src/main/res/layout/drawer_rv_item.xml
+++ b/Swallow/app/src/main/res/layout/drawer_rv_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:clickable="true"
+    android:background="@drawable/rc_selector">
     
     <TextView
         android:id="@+id/text"
