--- a/Swallow/app/src/main/res/layout/activity_test_main2.xml
+++ b/Swallow/app/src/main/res/layout/activity_test_main2.xml
@@ -15,6 +15,7 @@
 
         <!-- navigation drawer-->
         <LinearLayout
+            android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left|start"
